# rusty-zod

./: Cargo.toml  README.md
examples/: union_types.rs  user_validation.rs
src/: error.rs  lib.rs  macros.rs  prelude.rs  tests.rs
src/error/: error_code.rs  mod.rs  parse_error.rs  validation_error.rs
src/schemas/: array.rs  boolean.rs  mod.rs  number.rs  object.rs  string.rs  transform.rs
src/validators/: mod.rs
